test/libyul/yulSyntaxTests/switch_duplicate_default.yul
{
    switch 42
    default {}
    default {}
}
// ----
// ParserError 6931: (35-42='default'): Only one default case allowed.
